learning/pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-env
  name: pod-env
spec:
  containers:
  - command: [ 'sleep','1000']
    image: busybox
    name: pod-env
