learning/pod-liveness-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-liveness-exec
  name: pod-liveness-exec
spec:
  containers:
  - image: busybox
    name: pod-liveness-exec
    command:
      - "sleep"
      - "1000"
    livenessProbe:
      exec:
        command: 
          - "echo"
          - "helloworld"
      initialDelaySeconds: 5
      periodSeconds: 5
