learning/pod-liveness-tcp.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-liveness-tcp
  name: pod-liveness-tcp
spec:
  containers:
  - image: nginx
    name: pod-liveness-tcp
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
