learning/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-resources
  name: pod-resources
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: pod-resources
    resources: 
      requests:
              cpu: "250m"
              memory: "128Mi"
      limits:
              cpu: "512m"
              memory: "512Mi"
