learning/pod-secret-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-secret-volumes
  name: pod-secret-volumes
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: pod-secret-volumes
    volumeMounts:
            - name: config
              mountPath: /tmp/config
            - name: mysecret
              mountPath: /tmp/secret 
  volumes:
    - name: config          
      configMap:
         name: my-configmap
    - name: mysecret 
      secret:
        secretName: my-generic-secret
