learning/allow_access_to_webserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: devops
spec:
  podSelector:
    matchLabels:
      run: webserver
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            owner: devops
      ports:
        - protocol: TCP
          port: 80
