learning/block_all_interpod_communication.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: devops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
