learning/blockall_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: devops
spec:
  podSelector:
    matchLabels:
      run: webserver
  policyTypes:
  - Ingress
  - Egress
